# verl-tool

./: .gitignore  README.md  country_population_report.csv  dummy.csv  error_log.txt  init.sh  people_report.csv  pyproject.toml  ram.ipynb  result.csv  stats_optimized.csv  train_commands.sh  verl_qwen2_5.patch
acecoder_v2/: PARQUET_CONVERSION_USAGE.md  generate_data.sh  init_env.sh  jsonl_to_parquet.py  request_gpu.sh  train.sh  train_no_tool_dapo.sh  wyett_notes.txt
assets/docs/: install.md  tool_server.md  training_guide.md  training_results.md  udpate_verl_version.md
assets/docs/updates/: verltool_v0.6.0_upgrade.md  verltool_v0.7.0_upgrade.md
commands/: commands.sh  submit_train.sh
eval_service/: README.md  app.py  config.py  model_service.py  start_api_service.sh
eval_service/scripts/: start_api_service.sh
examples/data_preprocess/: acecoder.py  deepscaler.py  deepsearch.py  mcp_universe.py  mmau_pro.py  pixel_reasoner.py  skysql_train.py
examples/train/: README.md
scripts/: filter_too_easy_prompts.py  train_commands.sh
scripts/local-llm-ollama/: README.md  ollama_local_smoke_test.ipynb  run_test_agent_with_ollama.py
scripts/test-agent/: README.md  run_agent_loop_openai_compatible.py  test_agent_loop.ipynb  trajectory_test_agent.json
scripts/test-rl-ppo/: minimal_training_reward_walkthrough.ipynb
scripts/test-rl-ppo-smoke/: README.md  make_tiny_math_parquet.py
scripts/test-simple/: README.md  run_tool_server_and_test.py  test_simple_functional_test.ipynb
sft-models/: wenliang_8b_hybrid_thinking_enhanced  wenliang_nemotron_8b_hybrid_tool_mix_v1_sft_5500_step
task_func_data/: Output.txt
test_data/: test_case_2.csv
verl_tool/agent_loop/: __init__.py  agent_loop.py  single_turn_agent_loop.py  tool_agent_loop.py  verltool_agent_loop.py
verl_tool/llm_agent/: config.py  manager.py  utils.py  vision_process.py  vision_utils.py
verl_tool/servers/: ray_utils.py  serve.py  tool_server.py
verl_tool/tests/: test_async_vllm_tool_calling.py
verl_tool/trainer/: main_ppo.py
verl_tool/workers/: fsdp_workers.py  utils.py
(+231 files in other folders)
