[project]
name = "verl-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fire>=0.7.0",
    "psutils>=3.3.9",
    "timeout-decorator>=0.5.0",
    # Tool server runtime deps (needed for the minimal runnable walkthrough)
    "fastapi>=0.110",
    "uvicorn>=0.22",
    "pydantic>=2.0",
    "httpx>=0.24",
    "requests>=2.31.0",
    "tqdm>=4.0",
    "cachetools>=5.0",
    "qwen_vl_utils>=0.0.14",
    "qwen_omni_utils",
    "transformers",
    "tensorboard",
    "ipython",
    "func_timeout",
    "aiofiles",
    "click==8.2.1",
]

[tool.setuptools]
packages = ["verl_tool"]  # Explicitly specify only the verl_tool package

[project.optional-dependencies]
vllm = [
    "vllm<=0.11.0",
]
tool_browser = [
    "mini_webarena @ git+https://github.com/cogito233/mini_webarena.git",
]
acecoder = [
    "AceCoder @ git+https://github.com/TIGER-AI-Lab/AceCoder.git@dev",
]
torl = [
    "math-verify",
]
prime_code = [
    # NOTE: pyext is unmaintained and breaks on Python >= 3.12 (e.g., uses inspect.getargspec).
    # If you truly need prime-code reward scoring, use a patched fork:
    #   pip install git+https://github.com/ShaohonChen/PyExt.git@py311support
    "pyext; python_version < '3.12'",
]
search_tool = [
    "google-api-python-client",
    "chardet",
    "bs4",
    "langid",
    "pdfplumber",
    "nltk",
]
sql_tool = [
    "sqlparse",
]
mcp_tool = [
    "mcp[cli]",
    "PyYAML>=6.0",
    "regex>=2024.0.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "datasets",
    "pyarrow",
    "mcp-server-fetch",
]
python_code_dep = [
    "matplotlib",
    "pycosat",
    "gmpy2",
    "cvxpy",
    "cvxopt",
    "statsmodels",
    "datauri",
    "pytesseract",
    "igraph",
    "num2words",
    "mpmath",
    "annotated-types>=0.7.0",
    "h5py",
    "ipython",
    "numpy",
    "pandas",
    "psutil",
    "scipy",
    "sympy",
    "tqdm",
    "pulp",
    "shapely",
    "ortools",
]